--- a/style.css
+++ b/style.css
@@ -32,3 +32,17 @@
 .action .no:hover {
   background-color: darkred;
 }
+
+@media only screen and (max-width: 600px) {
+  img.dog-image {
+    height: 300px;
+  }
+
+  img.new-image{
+    height: 200px;
+  }
+
+  h1.text {
+    font-size: 20px;
+  }
+}
